feat: update refactoring code at arangodb db
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>