@@ -81,7 +81,7 @@ public class ArangoDBDocumentManagerTest {
     @Test
     public void shouldUpdateSave() {
         DocumentEntity entity = getEntity();
-        DocumentEntity documentEntity = entityManager.insert(entity);
+        entityManager.insert(entity);
         Document newField = Documents.of("newField", "10");
         entity.add(newField);
         DocumentEntity updated = entityManager.update(entity);
@@ -95,7 +95,7 @@ public class ArangoDBDocumentManagerTest {
         DocumentQuery select = select().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
         DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
         entityManager.delete(deleteQuery);
-        assertTrue(entityManager.select(select).collect(Collectors.toList()).isEmpty());
+        assertThat(entityManager.select(select)).hasSize(0);
     }
 
     @Test
@@ -105,7 +105,7 @@ public class ArangoDBDocumentManagerTest {
         DocumentQuery select = select().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
         DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
         entityManager.delete(deleteQuery);
-        assertTrue(entityManager.select(select).collect(Collectors.toList()).isEmpty());
+        assertThat(entityManager.select(select)).hasSize(0);
     }
 
 
@@ -114,7 +114,7 @@ public class ArangoDBDocumentManagerTest {
         DocumentEntity entity = entityManager.insert(getEntity());
         Document id = entity.find(KEY_NAME).get();
         DocumentQuery query = select().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
-        List<DocumentEntity> entities = entityManager.select(query).collect(Collectors.toList());
+        List<DocumentEntity> entities = entityManager.select(query).toList();
         assertFalse(entities.isEmpty());
         DocumentEntity documentEntity = entities.get(0);
         assertEquals(entity.find(KEY_NAME).get().value().get(String.class), documentEntity.find(KEY_NAME).get()
@@ -246,7 +246,7 @@ for (int index = 0; index < 20; index++) {
         entityManager.delete(deleteQuery);
         DocumentQuery select = select().from(COLLECTION_NAME).build();
         List<DocumentEntity> entities = entityManager.select(select).toList();
-        Assertions.assertThat(entities).isEmpty();
+        assertThat(entities).isEmpty();
     }
 
     private DocumentEntity getEntity() {
